[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Weapons/WeaponClassic.gd" type="Script" id=1]
[ext_resource path="res://Assets/Weapons/OldKnife.png" type="Texture" id=2]
[ext_resource path="res://Scenes/SoundPlayers/WeaponSound.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.5626, 30.217 )

[sub_resource type="Animation" id=2]
resource_name = "AttackL"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Rotate/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.39 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.309804, 0, 0, 1 ), Color( 0.670588, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotate:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.39, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 315.0, 235.0, 315.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "AttackR"
length = 0.4
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Rotate/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.337255, 0, 0, 1 ), Color( 0.737255, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotate:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00145311, 0.388949, 0.398152 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 45.0, 135.0, 45.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hit"
length = 0.2
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("Rotate/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.183047 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Rotate:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 25 ), Vector2( 16, 27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotate/Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rotate/Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotate:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 22 ), Vector2( 16, 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotate/Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rotate/Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="WeaponClassic" type="KinematicBody2D"]
script = ExtResource( 1 )
hitbox = Vector2( 14, 26 )

[node name="Rotate" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 16, 25.6191 )
rotation = 0.785398

[node name="Sprite" type="Sprite" parent="Rotate"]
position = Vector2( -3, -10 )
texture = ExtResource( 2 )
centered = false

[node name="RightColl" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightColl"]
position = Vector2( 31.215, 20.9345 )
shape = SubResource( 1 )

[node name="LeftColl" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftColl"]
position = Vector2( -1.91847, 20.9345 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackL = SubResource( 2 )
anims/AttackR = SubResource( 3 )
anims/Hit = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Walk = SubResource( 6 )

[node name="WeaponSound" parent="." instance=ExtResource( 3 )]
[connection signal="no_touch" from="." to="WeaponSound" method="_on_WeaponClassic_no_touch"]
